force-app/main/default/objects/Contact_Relationship__c/Contact_Relationship__c.object-meta.xml
<CustomObject>
    <fullName>Contact_Relationship__c</fullName>
    <label>Contact Relationship</label>
    <pluralLabel>Contact Relationships</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <description>Custom object to link Contacts with other contacts and define their relationship.</description>
    <household>false</household>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>