force-app/main/default/objects/Contact_Relationship__c/fields/Reciprocal_Auto_Created__c.field-meta.xml
<CustomField>
  <fullName>Reciprocal_Auto_Created__c</fullName>
  <label>Auto Created</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>