force-app/main/default/objects/Contact_Relationship__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationships to this Contact</relationshipLabel>
    <relationshipName>Related_Contact_Reverse</relationshipName>
    <type>Lookup</type>
</CustomField>