force-app/main/default/objects/Contact_Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Contact Relationship</label>
    <type>Picklist</type>
    <defaultValue/>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Cousin</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Grandchild</fullName>
            </value>
            <value>
                <fullName>Caretaker</fullName>
            </value>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Neighbor</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Power of Attorney</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Legal Guardian</fullName>
            </value>
            <value>
                <fullName>Ward</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
    <description>Contact Relationship picklist</description>
</CustomField>